--- a/second.css
+++ b/second.css
@@ -8,12 +8,22 @@ body {
     font-family: Helvetica, Arial, sans-serif; 
     font-size: 20px;
 }
+.picture {
+    position: absolute;
+}
+.textgri {
+    font-size: 15px;
+    color: rgb(55, 50, 50);
+    text-align: center;
+  }
     .pic {
         display: flex;
         justify-content: center;
-        padding-top: 150px;
-        padding-left: 200px;
-        border: 0.5rem solid #313A3A;
-        width: 300px;
-        height: 400px;
-      }
+        border: 2px solid rgb(38, 44, 47);
+        width: 150px;
+        height: 200px;
+        border-radius: 10px;
+        top: 150px;
+        left: 85px;
+}
+     
